<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WalletManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt1">Current Balance  :</string>
    <string name="btn1">ADD INCOME</string>
    <string name="btn2">NEW TRANSACTION</string>
    <string name="btn3">STATISTICS</string>
    <string name="txt2">Amount</string>
    <string name="txt3">Date</string>
    <string name="txt4">Catagory</string>
    <string name="txt5">Description</string>
    <string name="btn4">Save</string>
    <string name="btn5">Next</string>
    <string name="btn6">Catagory wise</string>
    <string name="btn7">Date Wise</string>
    <string name="btn8">year wise</string>
    <string name="btn9">chart representation</string>
    <string name="txt6">Catagory</string>

    <string name="btn10">Back</string>
    <string name="txt7">Transaction Details</string>
    <string name="txt8">Income Details</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="date1">DD/MM/YYYY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string-array name="catagory">
        <item >Food</item>
        <item >Fuel</item>
        <item >Rent</item>
        <item >Entertainment</item>
        <item >other</item>
    </string-array>

</resources>