<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#170B3B"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.walletmanager.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="#21610B"
        android:text="@string/btn1"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="24dp"
        android:background="#FF8000"
        android:onClick="click2"
        android:text="@string/btn2"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="26dp"
        android:background="#0B4C5F"
        android:onClick="click3"
        android:text="@string/btn3"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignTop="@+id/button1"
        android:src="@drawable/money" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/button3"
        android:src="@drawable/stats" />

</RelativeLayout>